--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </header>
 
   <main>
-    <section id="home">
+    <section id="home" class="hidden">
       <div class="container">
         <div class="intro-left">
           <p class="home-small-p">Hi, <span id="grey">I am</span></p>
@@ -51,7 +51,7 @@
     </section>
 
  <!-- ABOUT SECTION -->
-<section id="about" class="section about-section">
+<section id="about" class="section about-section hidden">
   <div class="container about-container">
     <div class="about-left">
       <h2 class="section-title">About Me</h2>
@@ -84,30 +84,30 @@
 
 
 <!-- SERVICES SECTION -->
-<section id="service" class="section services-section">
+<section id="service" class="section services-section hidden">
   <div class="container">
     <h2 class="section-title">My Services</h2>
     <div class="services-grid">
       
-      <div class="service-card">
+      <div class="service-card hidden">
         <i class="fas fa-code service-icon"></i>
         <h3>Web Development</h3>
         <p>I create responsive and dynamic websites using modern tech like HTML, CSS, JavaScript, Vue.js, and more.</p>
       </div>
 
-      <div class="service-card">
+      <div class="service-card hidden">
         <i class="fas fa-server service-icon"></i>
         <h3>Backend Development</h3>
         <p>REST APIs with Java & Spring Boot, secure authentication with JWT, and PostgreSQL database design.</p>
       </div>
 
-      <div class="service-card">
+      <div class="service-card hidden">
         <i class="fas fa-mobile-alt service-icon"></i>
         <h3>Mobile-Friendly Design</h3>
         <p>Fully responsive layouts optimized for phones, tablets, and all screen sizes with clean UI/UX principles.</p>
       </div>
 
-      <div class="service-card">
+      <div class="service-card hidden">
         <i class="fas fa-tools service-icon"></i>
         <h3>Deployment & Docker</h3>
         <p>I can dockerize your app and set up deployment-ready containers for scalable production environments.</p>
@@ -119,12 +119,12 @@
 
 
 <!-- PROJECTS SECTION -->
-<section id="projects" class="section projects-section">
+<section id="projects" class="section projects-section hidden">
   <div class="container">
     <h2 class="section-title">My Projects</h2>
     <div class="projects-grid">
 
-      <div class="project-card">
+      <div class="project-card hidden">
         <h3>UserAppManagement</h3>
         <p>Web app for managing users with roles, authentication using JWT, Spring Boot backend and Vue.js frontend.</p>
         <span class="tech-badge">Java</span>
@@ -133,7 +133,7 @@
         <a href="https://github.com/FlamurHaxholli1/user_management_fullstack.git" class="project-link" target="_blank">View on GitHub</a>
       </div>
 
-      <div class="project-card">
+      <div class="project-card hidden">
         <h3>AutoMuli</h3>
         <p>Vehicle sales platform with user registration, ad posting, and responsive UI. Includes backend logic for listings.</p>
         <span class="tech-badge">Html</span>
@@ -142,7 +142,7 @@
         <a href="https://github.com/FlamurHaxholli1/AutoMuli.git" class="project-link" target="_blank">View on GitHub</a>
       </div>
 
-      <div class="project-card">
+      <div class="project-card hidden">
         <h3>FitnessWeb</h3>
         <p>Fitness tracking and coaching platform. Built with data visualization tools and user profile management features.</p>
         <span class="tech-badge">Html</span>
@@ -151,7 +151,7 @@
         <a href="https://github.com/FlamurHaxholli1/FitnessWeb.git" class="project-link" target="_blank">View on GitHub</a>
       </div>
 
-      <div class="project-card coming-soon">
+      <div class="project-card coming-soon hidden">
         <h3>FoodNest</h3>
         <p>Online food delivery app with restaurant listings, menu browsing and order management.</p>
         <span class="tech-badge">Java</span>
@@ -166,7 +166,7 @@
 
 
 <!-- CONTACT SECTION -->
-<section id="contact" class="section">
+<section id="contact" class="section hidden">
 
     <h2 class="section-title">Contact me</h2>
 <form action="https://formsubmit.co/flamurhaxholli6@gmail.com" method="POST" class="contact-form">
