intro-right text align center

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </section>
 
  <!-- ABOUT SECTION -->
-<section id="about" class="section about-section hidden">
-  <div class="container about-container">
+<section id="about" class="section about-section">
+  <div class="container about-container hidden">
     <div class="about-left">
       <h2 class="section-title">About Me</h2>
       <p class="section-text">
@@ -69,14 +69,14 @@
     <div class="about-right">
       <h3 class="tech-title">Tech Stack</h3>
       <div class="tech-icons">
-        <span>☕ Java</span>
-        <span>🌱 Spring Boot</span>
-        <span>🌐 HTML/CSS</span>
-        <span>⚙️ REST API</span>
-        <span>📦 PostgreSQL</span>
-        <span>⚡ Vue.js</span>
-        <span>🛡️ JWT Auth</span>
-        <span>🐳 Docker</span>
+        <span class="hidden">☕ Java</span>
+        <span class="hidden">🌱 Spring Boot</span>
+        <span class="hidden">🌐 HTML/CSS</span>
+        <span class="hidden">⚙️ REST API</span>
+        <span class="hidden">📦 PostgreSQL</span>
+        <span class="hidden">⚡ Vue.js</span>
+        <span class="hidden">🛡️ JWT Auth</span>
+        <span class="hidden">🐳 Docker</span>
       </div>
     </div>
   </div>
@@ -119,8 +119,8 @@
 
 
 <!-- PROJECTS SECTION -->
-<section id="projects" class="section projects-section hidden">
-  <div class="container">
+<section id="projects" class="section projects-section">
+  <div class="container hidden">
     <h2 class="section-title">My Projects</h2>
     <div class="projects-grid">
 
