--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 
 
 <!-- SERVICES SECTION -->
-<section id="service" class="section services-section hidden">
+<section id="service" class="section services-section">
   <div class="container">
     <h2 class="section-title">My Services</h2>
-    <div class="services-grid">
+    <div class="services-grid hidden">
       
       <div class="service-card hidden">
         <i class="fas fa-code service-icon"></i>
@@ -120,9 +120,9 @@
 
 <!-- PROJECTS SECTION -->
 <section id="projects" class="section projects-section">
-  <div class="container hidden">
+  <div class="container">
     <h2 class="section-title">My Projects</h2>
-    <div class="projects-grid">
+    <div class="projects-grid hidden">
 
       <div class="project-card hidden">
         <h3>UserAppManagement</h3>
@@ -166,10 +166,10 @@
 
 
 <!-- CONTACT SECTION -->
-<section id="contact" class="section hidden">
+<section id="contact" class="section">
 
     <h2 class="section-title">Contact me</h2>
-<form action="https://formsubmit.co/flamurhaxholli6@gmail.com" method="POST" class="contact-form">
+<form action="https://formsubmit.co/flamurhaxholli6@gmail.com" method="POST" class="contact-form hidden">
   <input type="text" name="first_name" placeholder="First Name" required>
   <input type="text" name="last_name" placeholder="Last Name" required>
   <input type="email" name="email" placeholder="Your Email" required>
